--- a/smoky/cart_goods.html
+++ b/smoky/cart_goods.html
@@ -2131,141 +2131,170 @@
 						</div>
 						<div class="goodsinfo__desc description">
 							<div class="description__box description__box_title">
-								<h2 class="description__title">ОПИСАНИЕ</h2>
-								<h2 class="description__title description__title_active">ОТЗЫВЫ (15)</h2>
+								<h2 class="description__title description__title_1">ОПИСАНИЕ</h2>
+								<h2 class="description__title description__title_2 description__title_active">ОТЗЫВЫ (15)</h2>
 							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Шевченко Ирина</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Достоинства: Высокий, удобный, приятная цена<br>
-										Недостатки: Неудобные щипцы в комплекте<br>
-										Комментарий: Отличный подарок) быстрая доставка) приятно сотрудничать
-									</p>
-								</div>
-							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Остапко Андрей</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
-										Недостатки: получилась накладка с чашкой.<br>
-										Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-									</p>
-								</div>
-							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Качалов Викор</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Достоинства: 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
-										Недостатки: Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
-										Комментарий: Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
-									</p>
-								</div>
-								<button class="showmore">ПОКАЗАТЬ ВСЕ</button>
-							</div>
-							<div class="description__box goodreview">
-								<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
-								<div class="goodreview__rating">
-									<span>Ваша оценка:</span>
-									<div class="goodreview__stars ratingg">
-										<label>
-										    <input type="radio" name="rating" value="5" title="5 stars"> 5
-										  </label>
-										  <label>
-										    <input type="radio" name="rating" value="4" title="4 stars"> 4
-										  </label>
-										  <label>
-										    <input type="radio" name="rating" value="3" title="3 stars"> 3
-										  </label>
-										  <label>
-										    <input type="radio" name="rating" value="2" title="2 stars"> 2
-										  </label>
-										  <label>
-										    <input type="radio" name="rating" value="1" title="1 star"> 1
-										  </label>
-									</div>
-								</div>
-								<form action="">
-									<div class="goodreview__textarea">
-										<label for="">Достоинства:</label>
-										<textarea name="" id="" placeholder="Опишите достоинства товара"></textarea>
-									</div>
-									<div class="goodreview__textarea">
-										<label for="">Недостатки:</label>
-										<textarea name="" id="" placeholder="Опишите недостатки товара"></textarea>
-									</div>
-									<div class="goodreview__textarea">
-										<label for="">Комментарий:</label>
-										<textarea name="" id="" placeholder="Оставьте Ваш комментарий"></textarea>
-									</div>
-									<div class="goodreview__inputcont">
-										<div class="goodreview__inputbox">
-											<label for="">Ваше имя*:</label>
-											<input class="goodreview__input goodreview__input_1" type="text" placeholder="Введите имя">
+							<div class="description__block description__block_1">
+								<div class="description__box">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Остапко Андрей</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
 										</div>
-										<div class="goodreview__inputbox">
-											<label for="">Ваш e-mail (не публикуется)*:</label>
-											<input class="goodreview__input goodreview__input_2" type="email" placeholder="Введите e-mail">
 										</div>
-										<div class="goodreview__inputbox">
-											<label for="">Введите код с картинки*:</label>
-											<div class="goodreview__kapchacont">
-												<div class="goodreview__kapcha">
-													<img src="img/kapcha.jpg" alt="">
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
+										</div>
+									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
+											Недостатки: получилась накладка с чашкой.<br>
+											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="description__block description__block_2">
+								<div class="description__box">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Шевченко Ирина</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+										</div>
+										</div>
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
+										</div>
+									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: Высокий, удобный, приятная цена<br>
+											Недостатки: Неудобные щипцы в комплекте<br>
+											Комментарий: Отличный подарок) быстрая доставка) приятно сотрудничать
+										</p>
+									</div>
+								</div>
+								<div class="description__box">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Остапко Андрей</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+										</div>
+										</div>
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
+										</div>
+									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
+											Недостатки: получилась накладка с чашкой.<br>
+											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										</p>
+									</div>
+								</div>
+								<div class="description__box">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Качалов Викор</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+										</div>
+										</div>
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
+										</div>
+									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
+											Недостатки: Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
+											Комментарий: Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
+										</p>
+									</div>
+									<button class="showmore">ПОКАЗАТЬ ВСЕ</button>
+								</div>
+								<div class="description__box goodreview">
+									<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
+									<div class="goodreview__rating">
+										<span>Ваша оценка:</span>
+										<div class="goodreview__stars ratingg">
+											<label>
+											    <input type="radio" name="rating" value="5" title="5 stars"> 5
+											  </label>
+											  <label>
+											    <input type="radio" name="rating" value="4" title="4 stars"> 4
+											  </label>
+											  <label>
+											    <input type="radio" name="rating" value="3" title="3 stars"> 3
+											  </label>
+											  <label>
+											    <input type="radio" name="rating" value="2" title="2 stars"> 2
+											  </label>
+											  <label>
+											    <input type="radio" name="rating" value="1" title="1 star"> 1
+											  </label>
+										</div>
+									</div>
+									<form action="">
+										<div class="goodreview__textarea">
+											<label for="">Достоинства:</label>
+											<textarea name="" id="" placeholder="Опишите достоинства товара"></textarea>
+										</div>
+										<div class="goodreview__textarea">
+											<label for="">Недостатки:</label>
+											<textarea name="" id="" placeholder="Опишите недостатки товара"></textarea>
+										</div>
+										<div class="goodreview__textarea">
+											<label for="">Комментарий:</label>
+											<textarea name="" id="" placeholder="Оставьте Ваш комментарий"></textarea>
+										</div>
+										<div class="goodreview__inputcont">
+											<div class="goodreview__inputbox">
+												<label for="">Ваше имя*:</label>
+												<input class="goodreview__input goodreview__input_1" type="text" placeholder="Введите имя">
+											</div>
+											<div class="goodreview__inputbox">
+												<label for="">Ваш e-mail (не публикуется)*:</label>
+												<input class="goodreview__input goodreview__input_2" type="email" placeholder="Введите e-mail">
+											</div>
+											<div class="goodreview__inputbox">
+												<label for="">Введите код с картинки*:</label>
+												<div class="goodreview__kapchacont">
+													<div class="goodreview__kapcha">
+														<img src="img/kapcha.jpg" alt="">
+													</div>
+													<input class="goodreview__input goodreview__input_3" type="text" placeholder="Введите код сюда">
 												</div>
-												<input class="goodreview__input goodreview__input_3" type="text" placeholder="Введите код сюда">
 											</div>
 										</div>
-									</div>
-									<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
-								</form>
+										<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
+									</form>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -4830,7 +4859,7 @@
 
 <!-- BODY EOF   -->
 	
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
+	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>	
 	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
@@ -4838,12 +4867,13 @@
 	
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="js/jquery.ui.touch-punch.min.js"></script>
+	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
