--- a/smoky/constructor.html
+++ b/smoky/constructor.html
@@ -2057,45 +2057,46 @@
 							<img src="img/constmain.png" class="constructor__mainimg" alt="">
 							<div class="kalitem kalitem_1 click21">
 								<img src="img/part1.png" class="kalitem__img kalitem__img_1" alt="">
-								<div class="kalitem__title kalitem__title_1 click31">
-									<span>Лотой</span>
-									<img src="img/title1.png" alt="">
-								</div>
+							</div>
+							<div class="kalitem__title kalitem__title_1 click31">
+								<span>Лотос</span>
+								<img src="img/title1.png" alt="">
 							</div>
 							<div class="kalitem kalitem_2 click22">
 								<img src="img/part2.png" class="kalitem__img kalitem__img_2" alt="">
-								<div class="kalitem__title kalitem__title_2 click32">
-									<span>Чаша</span>
-									<img src="img/title2.png" alt="">
-								</div>
+								
+							</div>
+							<div class="kalitem__title kalitem__title_2 click32">
+								<span>Чаша</span>
+								<img src="img/title2.png" alt="">
 							</div>
 							<div class="kalitem kalitem_3 click23">
 								<img src="img/part3.png" class="kalitem__img kalitem__img_3" alt="">
-								<div class="kalitem__title kalitem__title_3 click33">
-									<span>Тарелка</span>
-									<img src="img/title3.png" alt="">
-								</div>
+							</div>
+							<div class="kalitem__title kalitem__title_3 click33">
+								<span>Тарелка</span>
+								<img src="img/title3.png" alt="">
 							</div>
 							<div class="kalitem kalitem_4 click24">
 								<img src="img/part4.png" class="kalitem__img kalitem__img_4" alt="">
-								<div class="kalitem__title kalitem__title_4 click34">
-									<span>Шахта</span>
-									<img src="img/title4.png" alt="">
-								</div>
+							</div>
+							<div class="kalitem__title kalitem__title_4 click34">
+								<span>Шахта</span>
+								<img src="img/title4.png" alt="">
 							</div>
 							<div class="kalitem kalitem_5 click25">
-								<img src="img/part5.png" class="kalitem__img kalitem__img_5" alt="">
-								<div class="kalitem__title kalitem__title_5 click35">
-									<span>Шланг</span>
-									<img src="img/title5.png" alt="">
-								</div>
+								<img src="img/part5.png" class="kalitem__img kalitem__img_5" alt="">			
+							</div>
+							<div class="kalitem__title kalitem__title_5 click35">
+								<span>Шланг</span>
+								<img src="img/title5.png" alt="">
 							</div>
 							<div class="kalitem kalitem_6 click26">
 								<img src="img/part6.png" class="kalitem__img kalitem__img_6" alt="">
-								<div class="kalitem__title kalitem__title_6 click36">
-									<span>Колба</span>
-									<img src="img/title6.png" alt="">
-								</div>
+							</div>
+							<div class="kalitem__title kalitem__title_6 click36">
+								<span>Колба</span>
+								<img src="img/title6.png" alt="">
 							</div>
 						</div>
 						<div class="constructor__item">
