--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2260,6 +2260,45 @@
 			<div class="overlay"></div>
 			<!--Modal window end-->
 			<!--Modal window-->
+			<div class="modalform modallog">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Вход в аккаунт</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<button class="showmore">Войти</button>
+					</form>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__soccont">
+						<p>Войти через социальные сети:</p>
+						<div class="socials">
+							<a href=""><img src="img/f1.png" alt=""></a>
+							<a href=""><img src="img/f2.png" alt=""></a>
+							<a href=""><img src="img/f3.png" alt=""></a>
+							<a href=""><img src="img/f4.png" alt=""></a>
+							<a href=""><img src="img/f5.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__reg">
+						<p>Нет учётной записи?</p>
+						<a href="" class="modal-run6">Зарегистрироваться</a>
+					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
 			<div class="modalform modalps">
 				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
 				<h2 class="modalform__title modalps__title">Пользовательское соглашение</h2>
