--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2029,7 +2029,7 @@
 				</div>
 				<div class="catgoods">
 					<div class="header__logo header__logo_mob">
-						<a href=""><img src="img/logo.svg" alt=""></a>
+						<a href=""><img src="img/logo.png" alt=""></a>
 					</div>
 					<h2 class="catgoods__title">КАТАЛОГ ТОВАРОВ</h2>
 					<div class="catgoods__cont">
@@ -4553,7 +4553,7 @@
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.svg" alt=""></a>
+				<a href=""><img src="img/logo.png" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4808,7 +4808,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.svg" alt="">
+					<img src="img/logo.png" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
