--- a/smoky/account.html
+++ b/smoky/account.html
@@ -1773,7 +1773,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1794,7 +1794,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1815,7 +1815,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1836,7 +1836,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
