--- a/smoky/cart_goods.html
+++ b/smoky/cart_goods.html
@@ -1773,7 +1773,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1794,7 +1794,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1815,7 +1815,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1836,7 +1836,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -2243,7 +2243,7 @@
 										<span>20:30:46</span>
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2270,7 +2270,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">NEW</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop2.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2296,7 +2296,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2321,7 +2321,7 @@
 							<div class="popular__item" style="margin: 0px 10px 10px 10px">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2350,7 +2350,7 @@
 										
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2385,7 +2385,7 @@
 										<span>20:30:46</span>
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2412,7 +2412,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">NEW</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop2.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2438,7 +2438,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2463,7 +2463,7 @@
 							<div class="popular__item" style="margin: 0px 10px 10px 10px">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2492,7 +2492,7 @@
 										
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
