--- a/smoky/constructor.html
+++ b/smoky/constructor.html
@@ -1773,7 +1773,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1794,7 +1794,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1815,7 +1815,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1836,7 +1836,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -2058,7 +2058,7 @@
 							<div class="constructor__bottom">
 								<div class="const__slider">
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2075,7 +2075,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2092,7 +2092,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2109,7 +2109,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2126,7 +2126,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2143,7 +2143,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2160,7 +2160,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2177,7 +2177,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
@@ -2194,7 +2194,7 @@
 										</div>
 									</div>
 									<div class="popular__item const__item">
-										<div class="popular__img const__img">
+										<div class="popular__img popular__img_active const__img">
 											<img src="img/constprod1.png" alt="">
 										</div>
 										<div class="popular__name const__name">
