--- a/smoky/wishlist.html
+++ b/smoky/wishlist.html
@@ -1773,7 +1773,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<!-- <div class="popular__amount">
@@ -1803,7 +1803,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1824,7 +1824,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1845,7 +1845,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -2074,7 +2074,7 @@
 										<span>20:30:46</span>
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2104,7 +2104,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">NEW</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop2.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2133,7 +2133,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2161,7 +2161,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2190,7 +2190,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2218,7 +2218,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
