--- a/smoky/balance.html
+++ b/smoky/balance.html
@@ -1773,7 +1773,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1794,7 +1794,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1815,7 +1815,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -1836,7 +1836,7 @@
 												<span>20:30:46</span>
 											</div>
 										</div>
-										<div class="popular__img">
+										<div class="popular__img popular__img_active">
 											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
@@ -2003,7 +2003,7 @@
 										<span>20:30:46</span>
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2033,7 +2033,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">NEW</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop2.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2062,7 +2062,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2090,7 +2090,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2119,7 +2119,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2147,7 +2147,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2183,7 +2183,7 @@
 										<span>20:30:46</span>
 									</div>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop1.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2213,7 +2213,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">NEW</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop2.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2242,7 +2242,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2270,7 +2270,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2299,7 +2299,7 @@
 								<div class="popular__top">
 									<span class="popular__stiker">хит</span>
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop3.jpg" alt="">
 								</div>
 								<div class="popular__name">
@@ -2327,7 +2327,7 @@
 							<div class="popular__item gcont__item">
 								<div class="popular__top">
 								</div>
-								<div class="popular__img">
+								<div class="popular__img popular__img_active">
 									<img src="img/pop4.jpg" alt="">
 								</div>
 								<div class="popular__name">
