--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2149,10 +2149,10 @@
 								<div class="popular__tool popular__color" data-value="1">
 									<img src="img/color1.png" alt="">
 								</div>
-								<div class="popular__tool popular__color" data-value="2">
+								<div class="popular__tool popular__color popular__hide" data-value="2">
 									<img src="img/color2.png" alt="">
 								</div>
-								<div class="popular__tool popular__color" data-value="3">
+								<div class="popular__tool popular__color popular__hide" data-value="3">
 									<img src="img/color4.png" alt="">
 								</div>
 							</div>
