--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2562,7 +2562,7 @@
 									<span>01</span>
 								</div>
 								<div class="types__imgcont">
-									<img src="img/type1.jpg" alt="">
+									<img src="img/type1.png" alt="">
 								</div>
 								<h2 class="types__title">
 									эконом
