--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -20,7 +20,7 @@
 
 <!-- BEGIN CONTENT -->
 
-	<main class="content">		
+	<!-- <main class="content">		
 		<div class="wrapper">
 			<div class="sidebar">
 				<div class="sidenav">
@@ -2344,7 +2344,7 @@
 			<div class="overlay"></div>
 			<!--Modal window end-->
 		</div>		
-	</main>	
+	</main>	 -->
 			
 <!-- CONTENT EOF   -->
 
