--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -20,7 +20,7 @@
 
 <!-- BEGIN CONTENT -->
 
-	<!-- <main class="content">		
+	<main class="content">		
 		<div class="wrapper">
 			<div class="sidebar">
 				<div class="sidenav">
@@ -2344,7 +2344,7 @@
 			<div class="overlay"></div>
 			<!--Modal window end-->
 		</div>		
-	</main>	 -->
+	</main>	
 			
 <!-- CONTENT EOF   -->
 
@@ -2786,13 +2786,12 @@
 	
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
+	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="js/jquery.ui.touch-punch.min.js"></script>
-	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
